# restore-rds-db-from-snapshot

./: .gitignore  Makefile  README.md  app_menu.py  database_manager.py  main.py  pyproject.toml  rds_manager.py  requirements.txt  run_linter.zsh  run_tests.zsh
lib/: app_menu.py  database_manager.py  rds_manager.py
templates/: database.tpl
tests/: test_main.py
