[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "restore-rds-db-from-snapshot"
version = "0.1.0"
description = "Restore an RDS database from a snapshot"
requires-python = ">=3.13"
dependencies = [
    "boto3",
    "Jinja2",
    "questionary",
]

[project.scripts]
restore-rds = "main:main"

[project.optional-dependencies]
dev = [
    "moto[rds,ec2]",
    "pytest",
    "responses",
    "ruff",
]

[tool.hatch.build.targets.wheel]
include = ["main.py", "lib/"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
